--- a/app/views/registered_applications/_registered_application.html.erb
+++ b/app/views/registered_applications/_registered_application.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-8">
-  <%= form_for @registered_applications do |f| %>
+  <%= form_for @registered_application do |f| %>
     <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control', placeholder: "Enter app name." %>
