--- a/app/views/registered_applications/index.html.erb
+++ b/app/views/registered_applications/index.html.erb
@@ -1,6 +1,9 @@
-<% @registered_applications.each do |registered_applications| %>
-<%= registered_applications.name %>
-<%= registered_applications.url %>
-<% end %>
+<% @registered_applications.each do |registered_application| %>
+  <ul>
+  <%= registered_application.name %>
+  <%= registered_application.url %>
+  <%= link_to 'View', registered_application %>
+  </ul>
+<% end %> <br>
 
 <%= link_to "New App", new_registered_application_path %>
